test_data/streamwalk/valid/strings/01_hello.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

"Hello, World!"

# EXPECTED

STRING b"Hello, World!"
END_DOCUMENT
