test_data/streamwalk/invalid/syntax/02_trailing_garbage.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

{}x

# EXPECTED

ERROR trailing_garbage offset=2
